--- a/src/assets/develop/MEM - Membership.yaml
+++ b/src/assets/develop/MEM - Membership.yaml
@@ -9,19 +9,81 @@ metadata:
   label: Membership
   description: A Membership
   examples:
-    - Please fill me in
+    - Director on the Board of a Company or Organization
+    - Employee
+    - Member of a Bikie Club
+    - Bitcoin Association
+    - Gym Membership
+    - Citizenship
+    - Political Party
 
 fields:
-  - name: ExpiryDate
-    label: ExpiryDate
-    type: time
-    example: 27/06/2019
-    exampleHex: 0x0000017802b01f00
-    size: 8
-
-  - name: LenIDNumber
-    label: LenIDNumber
+  - name: Version
+    label: Version
     type: uint8
-    example: 12
-    exampleHex: 0x0c
+    description: Payload Version
     size: 1
+    example: 0
+    computed: true
+
+  - name: TradingRestriction
+    label: Trading Restriction
+    type: polity
+    size: 5
+    example: AUS
+    span: full
+    displayOrder: 3
+
+  - name: AgeRestriction
+    label: Age Restriction
+    type: dropdown
+    size: 5
+    example: 18+
+    options:
+      - 15-18
+      - 18+
+      - 19+
+      - 21+
+      - 21-30
+      - 18-
+
+  - name: ValidFrom
+    label: Valid From
+    type: timestamp
+    size: 8
+    example: Fri Nov 09 2018 09:00:00 GMT+1000 (AEST)
+    span: right
+    displayOrder: 3
+
+  - name: ExpirationTimestamp
+    label: Expiration Timestamp
+    type: timestamp
+    size: 8
+    example: Fri Nov 09 2018 09:00:00 GMT+1000 (AEST)
+    span: right
+    displayOrder: 3
+    
+  - name: ID
+    label: ID
+    type: nvarchar8
+    size: 255
+    example: 34536457575486868
+    span: right
+    displayOrder: 3 
+    
+  - name: MembershipType
+    label: MembershipType
+    type: nvarchar8
+    size: 255
+    example: Director, Silver, Employee
+    span: right
+    displayOrder: 3   
+    
+  - name: Description
+    label: Description
+    type: nvarchar64
+    size: 65,535
+    example: Rights and duties listed.
+    span: full
+    displayOrder: 1
+    required: true
